
h2(#sirius7.2.1). Changes in Sirius 7.2.1

h3. User-Visible Changes

* <span class="label label-info">Modified</span> Sequence diagrams are now correctly identified in the Sirius Session Details report (accessible with the "Properties" dialog on an aird file).


h3. Specifier-Visible Changes

h3. Developer-Visible Changes

h2(#sirius7.2.0). Changes in Sirius 7.2.0

h3. User-Visible Changes

* <span class="label label-info">Modified</span> Java 17 (or later) is now required to run Sirius.
* <span class="label label-info">Modified</span> When a semantic modification is made on a diagram (e.g. Drag and Drop of an element), the notes and texts attached to the element remain attached, and the notes and texts contained in the element are preserved as much as possible.
* <span class="label label-info">Modified</span> When an element is deleted after drag and drop, its attached notes and texts are also removed if preference "Remove/hide note when the annotated element is removed/hidden" is enabled.

h3. Specifier-Visible Changes

* <span class="label label-success">Added</span> New decorators are now available for the beginning and edge of edges: @CirclePlus@, @DiamondWithDot@, @FillDiamondWithDot@, @InputArrowWithDiamondAndDot@, @InputArrowWithDot@, @InputArrowWithFillDiamondAndDot@.

h3. Developer-Visible Changes

* <span class="label label-info">Modified</span> Java 17 is required as BREE and source level.

h4. Changes in @org.eclipse.sirius.diagram.ui@

<span class="label label-success">Added</span> @org.eclipse.sirius.diagram.ui.business.api.query.NodeQuery.getFreeFormContainerCompartment()@ is added to get the compartment of the GMF node container with "free form" layout.